yamls/ingress-demo/traefik/middlewares/traefik-dashboard.yaml

#dashboard.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: dashboard
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`traefik.devopsfriends.com`)
      kind: Rule
      services:
        - name: api@internal
          kind: TraefikService
